// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Permission /> AnyDenied render equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
/>
`;

exports[`<Permission /> Basic render equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="p-component"
  >
    Permissions checked: 
    undefined
  </div>
</div>
`;

exports[`<Permission /> Denied render equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
/>
`;

exports[`<Permission /> Granted render equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="p-component"
  >
    Permissions checked: 
    granted
  </div>
</div>
`;

exports[`<Permission /> Multiple render equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="p-component"
  >
    Permissions checked: 
    granted,pageXYZ
  </div>
</div>
`;

exports[`<Permission /> Wildcard render equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="p-component"
  >
    Permissions checked: 
    pageXYZ
  </div>
</div>
`;
